feat - Created local Microsoft SQL database; feat - Created MyRental database context; feat - Implemented into Infrastructure project: entity framework core, SQL server; feat - Implemented entity framework design into Api project.

--- a/MyRental.Api/appsettings.json
+++ b/MyRental.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyRentalDatabase" : "Server=(localdb)\\MSSQLLocalDB;Database=MyRental_Local;Trusted_Connection=True;"
+  }
 }
