--- a/MyRental.Infrastructure/MyRental.Infrastructure.csproj
+++ b/MyRental.Infrastructure/MyRental.Infrastructure.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Identity.Web" Version="1.25.1" />
+    </ItemGroup>
+
 </Project>
