feat - Initialized configuration using UserSecrets; feat - Added Database connection string to UserSecrets.

--- a/MyRental.Infrastructure/MyRental.Infrastructure.csproj
+++ b/MyRental.Infrastructure/MyRental.Infrastructure.csproj
@@ -4,12 +4,14 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <UserSecretsId>437df9a6-db6f-47df-afa2-093973e5079e</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
