--- a/MyRental.Api/appsettings.json
+++ b/MyRental.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyRentalDatabase" : "Server=(localdb)\\MSSQLLocalDB;Database=MyRental_Local;Trusted_Connection=True;"
+    "MyRentalDatabase" : "Stores in UserSecrets"
   }
 }
