fix - Fixed code review remarks; fix - Created UserService with CRUD; fix - Added UserDto; fix - Added PingController.

--- a/MyRental.Services/MyRental.Services.csproj
+++ b/MyRental.Services/MyRental.Services.csproj
@@ -10,4 +10,12 @@
       <ProjectReference Include="..\MyRental.Infrastructure\MyRental.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Areas\Users" />
+    </ItemGroup>
+
 </Project>
