--- a/MyRental.Api/appsettings.json
+++ b/MyRental.Api/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "DPdfspdisdfsdsf8uds8u32ADSdas23fs8d4",
+    "Issuer": "https://localhost:5000/",
+    "Audience": "https://localhost:5000/"
+  },
   "ConnectionStrings": {
     "MyRentalDatabase" : "Stores in UserSecrets"
   }
