fix - Fixed authentication type(data stores in local storage by jwt); fix - Fixed AdDtoInput validation; fix - Created dto to MediaFile entity.

--- a/MyRental.Blazor/appsettings.json
+++ b/MyRental.Blazor/appsettings.json
@@ -6,7 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "DPdfspdisdfsdsf8uds8u32ADSdas23fs8d4",
+    "Issuer": "https://localhost:7263/",
+    "Audience": "https://localhost:7263/"
+  },
   "ConnectionStrings": {
-    "MyRentalDatabase":"Stores in UserSecrets"
+    "MyRentalDatabase" : "Stores in UserSecrets"
   }
 }
