--- a/MyRental.Api/appsettings.json
+++ b/MyRental.Api/appsettings.json
@@ -7,9 +7,13 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "DPdfspdisdfsdsf8uds8u32ADSdas23fs8d4",
-    "Issuer": "https://localhost:5000/",
-    "Audience": "https://localhost:5000/"
+    "Key": "Stores in UserSecrets",
+    "Issuer": "Stores in UserSecrets",
+    "Audience": "Stores in UserSecrets"
+  },
+  "NetworkCredential": {
+    "UserName": "Stores in UserSecrets",
+    "Password": "Stores in UserSecrets"
   },
   "ConnectionStrings": {
     "MyRentalDatabase" : "Stores in UserSecrets"
